:pencil2: fix overflow

--- a/2024/misc/custom.css
+++ b/2024/misc/custom.css
@@ -12,6 +12,10 @@ pre code {
   border-radius: 15px 5px 5px 25px / 5px 25px 25px 5px;
 }
 
+.sourceCode {
+  overflow: auto;
+}
+
 div.callout-note.callout-style-default>.callout-header {
   border-radius: 55em;
 }
@@ -21,4 +25,8 @@ div.callout-note.callout-style-default>.callout-header {
   margin-left: auto;
   margin-right: auto;
   width: 75%;
+}
+
+#title-block-header.quarto-title-block.default .quarto-title-meta {
+  grid-template-columns: repeat(3, 1fr);
 }
